[package]
name = "proyecto_taller_1"
version = "0.3.14"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
[dependencies.redis]
#version = "*"
redis = { version = "0.21.1-alpha.0" }
git = "https://github.com/mitsuhiko/redis-rs.git"
